--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "moment": "^2.18.1",
     "prop-types": "^15.5.8",
     "react": "~15.5.4",
-    "react-dom": "~15.5.4"
+    "react-dom": "~15.5.4",
+    "react-file-reader-input": "^1.1.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5",
