--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,15 @@
   "dependencies": {
     "axios": "~0.16.1",
     "babel-plugin-transform-class-properties": "6.22.0",
-    "moment": "^2.18.1",
-    "prop-types": "^15.5.8",
+    "moment": "~2.18.1",
+    "prop-types": "~15.5.8",
     "react": "~15.5.4",
     "react-dom": "~15.5.4",
     "react-file-reader-input": "^1.1.0"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5",
-    "react-addons-test-utils": "15.4.0"
+    "react-addons-test-utils": "15.4.0",
+    "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
