--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "body-parser": "~1.17.1",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
-    "global": "^4.3.2",
     "mocha": "^3.2.0",
-    "mongoose": "~4.9.5"
+    "mongoose": "~4.9.5",
+    "node-sass": "^4.5.2"
   },
   "devDependencies": {
     "concurrently": "~3.4.0",
